# onnx2casadi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/onnx2casadi/: __init__.py  onnx_to_casadi.py
src/onnx2casadi/importers/: __init__.py  onnx_importer.py
src/onnx2casadi/layers/: __init__.py  layer_converter.py
src/onnx2casadi/utils/: __init__.py
tests/: __init__.py  test_layer_converter.py  test_onnx_importer.py  test_onnx_to_casadi.py
